force-app/main/default/objects/Profile_Metadata__c/Profile_Metadata__c.object-meta.xml
<CustomObject>
    <description>Attachments to these records store a JSON representation of the complete profile detail.</description>
    <label>Profile Metadata</label>
    <nameField>
        <label>FullName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profile Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>