force-app/main/default/objects/Profile_Metadata__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <description>The Profile&apos;s Salesforce Id.</description>
    <inlineHelpText>The Profile&apos;s Salesforce Id.</inlineHelpText>
    <label>Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>