force-app/main/default/objects/Profile_Metadata__c/fields/Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true if the profile previously existed, but has since been deleted</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>