force-app/main/default/objects/Profile_Metadata__c/fields/Is_Too_Large_To_Process__c.field-meta.xml
<CustomField>
    <fullName>Is_Too_Large_To_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the readMetadata() callout for this Profile exceeded the 120s (2min) max.</description>
    <inlineHelpText>If true, the readMetadata() callout for this Profile exceeded the 120s (2min) max.</inlineHelpText>
    <label>Is Too Large To Process</label>
    <type>Checkbox</type>
</CustomField>