force-app/main/default/objects/Profile_Metadata__c/fields/Last_Modified_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Datetime__c</fullName>
    <description>Datetime that the Profile was last modified.</description>
    <inlineHelpText>Datetime that the Profile was last modified.</inlineHelpText>
    <label>Last Modified Datetime</label>
    <type>DateTime</type>
</CustomField>